4to commit, añado SASS + SEO + Mejoras generales a la pagina

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
     <link rel="shortcut icon" href="img/brownie.jpeg" type="image/x-icon">
 
+    <meta name="keywords" content="Reposteria, Boulogne, Inicio, Tortas, Huevos de pascua, Inicio, Venta, Compra, Navidad, Halloween">
+    <meta name="description" content="Tortas y reposteria 100% personalizada. La mejor calidad y buenos precios. Consultanos por WhatsApp!">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
@@ -16,7 +19,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Reposteria Faccini</title>
+    <title>Inicio | Reposteria Faccini</title>
 </head>
 
 
@@ -45,7 +48,7 @@
 </header>
 
 <div class="texto-bienvenida">
-    <h1 class="text-center">Bienvenida/o a Reposteria Faccini</h1>
+    <h1 class="text-center">Bienvenida/o a <strong class="strongs">Reposteria Faccini</strong></h1>
 </div>    
 
 
@@ -102,6 +105,75 @@
 
 <h2 class="text-center mt-5">Hacemos las mejores tortas, 100% personalizadas. No dudes en hablarnos por WhatsApp.</h2>
 
+<a class="divisor text-center" href="pages/productos.html">Productos</a>
+
+    <div class="padre-cards container-fluid">
+        <div class="card" style="width: 18rem;">
+            <img src="img/fulbo.jpeg" class="card-img-top" alt="Torta futbol">
+            <div class="card-body">
+                <h5 class="card-title">Torta futbol</h5>
+                <p class="card-text">La torta puede ser personalizada a gusto, por peso, tamaño, etc. No dudes en contactarnos!</p>
+                <a href="https://wa.me/+541122630604" class="btn btn-card">Comprar</a> 
+            </div>
+        </div>
+
+        <div class="card" style="width: 18rem;">
+            <img src="img/kakashi.jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+            <h5 class="card-title">Torta Naruto</h5>
+            <p class="card-text">La torta puede ser personalizada a gusto, por peso, tamaño, etc. No dudes en contactarnos!</p>
+            <a href="https://wa.me/+541122630604" class="btn btn-card">Comprar</a>
+            </div>
+        </div>
+
+
+        <div class="card" style="width: 18rem;">
+            <img src="img/princesa.jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+            <h5 class="card-title">Torta princesa</h5>
+            <p class="card-text">La torta puede ser personalizada a gusto, por peso, tamaño, etc. No dudes en contactarnos!</p>
+            <a href="contacto.html" class="btn btn-card">Comprar</a>
+            </div>
+        </div>
+
+        <div class="card" style="width: 18rem;">
+            <img src="img/racing.jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+            <h5 class="card-title">Torta Racing</h5>
+            <p class="card-text">La torta puede ser personalizada a gusto, por peso, tamaño, etc. No dudes en contactarnos!</p>
+            <a href="contacto.html" class="btn btn-card">Comprar</a>
+            </div>
+        </div>
+    </div>
+
+<a class="divisor titulo-historia text-center" href="pages/historia.html">Historia</a>
+
+<section>
+    <h2 class="mt-5 text-center">Nuestra historia</h2>
+    <div class="historia text-center">
+    <p class="pf">Nos dedicamos a hacer tortas y repostería en general hace más de 30 años, con pasión y dedicación, y mejorando constantemente. Hemos dado cursos a lo largo de toda Argentina; capacitando nuevas generaciones de reposteros/as. Nuestro objetivo es que el cliente se encuentre satisfecho, y brindamos la mejor calidad, y el mejor precio. 
+    </p>
+    <img class="img-historia" src="img/corona.jpeg" alt="">
+    <p class="pf">Hacemos tortas 100% personalizadas, y para cada festividad te acompañamos de la mejor manera: huevos de pascua, tortas tematicas, pan dulce, todo lo necesario para bautismos, casamientos, cumpleaños, navidades, halloween, etc. No dudes en contactarnos!
+    </p>
+    <img class="img-historia" src="img/navidad.jpeg" alt="">
+<div>
+</section>
+
+<a class="divisor text-center" href="pages/ubicacion.html">Ubicacion</a>
+
+<h2 class="mt-5 mb-5 text-center">Nos encontramos por Boulogne, la ubicacion de retiro se coordina por whatsapp</h2>
+
+<div class="mapa">
+<iframe class="" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26305.105256216848!2d-58.587108863505826!3d-34.49938158300289!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcba64ba48f9cb%3A0xd61b4bdbdfb6d529!2sBoulogne%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1672083964670!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+</div>
+
+<a class="divisor text-center" href="pages/contacto.html">Contacto</a>
+
+<div class="contacto">
+    <h2 class="mt-5 mb-5">Contacto directo por telefono:</h2>
+    <a class="whatsapp mt-2 mb-5 btn" href="https://wa.me/+541122630604" target="_blank">Hablanos por whatsapp</a>
+</div>
 
 <footer class="mt-5">
     <div class="container">
