--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -7,6 +7,9 @@
 
     <link rel="shortcut icon" href="../img/brownie.jpeg" type="image/x-icon">
 
+    <meta name="keywords" content="Reposteria, Ubicacion, Boulogne, Tortas, Huevos de pascua, Inicio, Venta, Compra, Navidad, Halloween">
+    <meta name="description" content="Tortas y reposteria 100% personalizada. La mejor calidad y buenos precios. Consultanos por WhatsApp!">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
@@ -16,7 +19,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
-    <title>Ubicacion</title>
+    <title>Ubicacion | Reposteria Faccini</title>
 </head>
 
 <body>
@@ -45,7 +48,7 @@
     </header>
 
 
-    <h2 class="mb-5 text-center">Nos encontramos por Boulogne, la ubicacion de retiro se coordina por whatsapp</h2>
+    <h1 class="mb-5 text-center">Nos encontramos por <strong class="strongs">Boulogne</strong>, la ubicacion de retiro se coordina por whatsapp</h1>
 
     <div class="mapa">
     <iframe class="" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26305.105256216848!2d-58.587108863505826!3d-34.49938158300289!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcba64ba48f9cb%3A0xd61b4bdbdfb6d529!2sBoulogne%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1672083964670!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
