--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,6 +7,9 @@
 
     <link rel="shortcut icon" href="../img/brownie.jpeg" type="image/x-icon">
 
+    <meta name="keywords" content="Reposteria, Boulogne, Contacto, Telefono, Llamanos, Formulario, Whatsapp, Tortas, Huevos de pascua, Inicio, Venta, Compra, Navidad, Halloween">
+    <meta name="description" content="Tortas y reposteria 100% personalizada. La mejor calidad y buenos precios. Consultanos por WhatsApp!">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
@@ -16,7 +19,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
-    <title>Contacto</title>
+    <title>Contacto | Reposteria Faccini</title>
 </head>
 
 <body>
@@ -45,8 +48,8 @@
     </header>
 
 <div class="contacto">
-    <h2 class="mt-5 mb-5">Contacto directo por telefono:</h2>
-    <a class="whatsapp mt-2 mb-5" href="https://wa.me/+541122630604" target="_blank">Hablanos por whatsapp</a>
+    <h1 class="mt-5 mb-5">Contacto directo por <strong class="strongs">WhatsApp:</strong></h1>
+    <a class="whatsapp mt-2 mb-5 btn" href="https://wa.me/+541122630604" target="_blank">Hablanos por whatsapp</a>
 </div>
 
 <section> 
