--- a/pages/historia.html
+++ b/pages/historia.html
@@ -7,6 +7,9 @@
 
     <link rel="shortcut icon" href="../img/brownie.jpeg" type="image/x-icon">
 
+    <meta name="keywords" content="Reposteria, Boulogne, Historia, Tortas, Huevos de pascua, Inicio, Venta, Compra, Navidad, Halloween">
+    <meta name="description" content="Tortas y reposteria 100% personalizada. La mejor calidad y buenos precios. Consultanos por WhatsApp!">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
@@ -16,7 +19,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">    
-    <title>Historia</title>
+    <title>Historia | Reposteria Faccini</title>
 </head>
 
 <body>
@@ -46,12 +49,10 @@
 
 
 <section>
-    <h2 class="nuestra-historia text-center">Nuestra historia</h2>
+    <h1 class="text-center"><strong class="strongs">Nuestra historia</strong></h1>
     <div class="historia text-center">
     <p class="pf">Nos dedicamos a hacer tortas y repostería en general hace más de 30 años, con pasión y dedicación, y mejorando constantemente. Hemos dado cursos a lo largo de toda Argentina; capacitando nuevas generaciones de reposteros/as. Nuestro objetivo es que el cliente se encuentre satisfecho, y brindamos la mejor calidad, y el mejor precio. 
     </p>
-    <p class="pf">Hacemos tortas 100% personalizadas, y para cada festividad te acompañamos de la mejor manera: huevos de pascua, tortas tematicas, pan dulce, todo lo necesario para bautismos, casamientos, cumpleaños, navidades, halloween, etc. No dudes en contactarnos!</p>
-<div>
 </section>
 
 <section> 
@@ -101,6 +102,9 @@
             </button>
         </div>
     </section>
+
+    <p class="mt-5 pf">Hacemos tortas 100% personalizadas, y para cada festividad te acompañamos de la mejor manera: huevos de pascua, tortas tematicas, pan dulce, todo lo necesario para bautismos, casamientos, cumpleaños, navidades, halloween, etc. No dudes en contactarnos!</p>
+<div>
 
 <footer class="mt-5">
     <div class="container">
