--- a/pages/productos.html
+++ b/pages/productos.html
@@ -7,6 +7,9 @@
 
     <link rel="shortcut icon" href="../img/brownie.jpeg" type="image/x-icon">
 
+    <meta name="keywords" content="Reposteria, Boulogne, Productos, Tortas, Huevos de pascua, Inicio, Venta, Compra, Navidad, Halloween">
+    <meta name="description" content="Tortas y reposteria 100% personalizada. La mejor calidad y buenos precios. Consultanos por WhatsApp!">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
@@ -16,7 +19,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">    
-    <title>Productos</title>
+    <title>Productos | Reposteria Faccini</title>
 </head>
 
 <body>
@@ -44,13 +47,15 @@
     </nav>
 </header>
 
-<div class="padre-cards container-fluid">
+<h1 class="text-center mt-5"><strong class="strongs">Personalizá tu pedido</strong> como vos quieras!</h1>
+
+<main class="padre-cards container-fluid">
     <div class="card" style="width: 18rem;">
         <img src="../img/fulbo.jpeg" class="card-img-top" alt="Torta futbol">
         <div class="card-body">
           <h5 class="card-title">Torta futbol</h5>
           <p class="card-text">La torta puede ser personalizada a gusto, por peso, tamaño, etc. No dudes en contactarnos!</p>
-          <a href="https://wa.me/+541122630604" class="btn btn-primary">Comprar</a> 
+          <a href="https://wa.me/+541122630604" class="btn btn-card">Comprar</a> 
         </div>
       </div>
 
@@ -59,7 +64,7 @@
         <div class="card-body">
           <h5 class="card-title">Torta Naruto</h5>
           <p class="card-text">La torta puede ser personalizada a gusto, por peso, tamaño, etc. No dudes en contactarnos!</p>
-          <a href="https://wa.me/+541122630604" class="btn btn-primary">Comprar</a>
+          <a href="https://wa.me/+541122630604" class="btn btn-card">Comprar</a>
         </div>
       </div>
 
@@ -69,7 +74,7 @@
         <div class="card-body">
           <h5 class="card-title">Torta princesa</h5>
           <p class="card-text">La torta puede ser personalizada a gusto, por peso, tamaño, etc. No dudes en contactarnos!</p>
-          <a href="contacto.html" class="btn btn-primary">Comprar</a>
+          <a href="contacto.html" class="btn btn-card">Comprar</a>
         </div>
       </div>
 
@@ -78,7 +83,7 @@
         <div class="card-body">
           <h5 class="card-title">Torta Racing</h5>
           <p class="card-text">La torta puede ser personalizada a gusto, por peso, tamaño, etc. No dudes en contactarnos!</p>
-          <a href="contacto.html" class="btn btn-primary">Comprar</a>
+          <a href="contacto.html" class="btn btn-card">Comprar</a>
         </div>
       </div>
 
@@ -87,7 +92,7 @@
         <div class="card-body">
           <h5 class="card-title">Torta sirenita</h5>
           <p class="card-text">La torta puede ser personalizada a gusto, por peso, tamaño, etc. No dudes en contactarnos!</p>
-          <a href="contacto.html" class="btn btn-primary">Comprar</a>
+          <a href="contacto.html" class="btn btn-card">Comprar</a>
         </div>
       </div>
 
@@ -96,7 +101,7 @@
         <div class="card-body">
           <h5 class="card-title">Torta Allboys</h5>
           <p class="card-text">La torta puede ser personalizada a gusto, por peso, tamaño, etc. No dudes en contactarnos!</p>
-          <a href="contacto.html" class="btn btn-primary">Comprar</a>
+          <a href="contacto.html" class="btn btn-card">Comprar</a>
         </div>
       </div>
 
@@ -105,7 +110,7 @@
         <div class="card-body">
           <h5 class="card-title">Torta animales</h5>
           <p class="card-text">La torta puede ser personalizada a gusto, por peso, tamaño, etc. No dudes en contactarnos!</p>
-          <a href="contacto.html" class="btn btn-primary">Comprar</a>
+          <a href="contacto.html" class="btn btn-card">Comprar</a>
         </div>
       </div>
 
@@ -114,7 +119,7 @@
         <div class="card-body">
           <h5 class="card-title">Torta babyshark</h5>
           <p class="card-text">La torta puede ser personalizada a gusto, por peso, tamaño, etc. No dudes en contactarnos!</p>
-          <a href="contacto.html" class="btn btn-primary">Comprar</a>
+          <a href="contacto.html" class="btn btn-card">Comprar</a>
         </div>
       </div>
 
@@ -123,7 +128,7 @@
         <div class="card-body">
           <h5 class="card-title">Torta basket</h5>
           <p class="card-text">La torta puede ser personalizada a gusto, por peso, tamaño, etc. No dudes en contactarnos!</p>
-          <a href="contacto.html" class="btn btn-primary">Comprar</a>
+          <a href="contacto.html" class="btn btn-card">Comprar</a>
         </div>
       </div>
 
@@ -132,7 +137,7 @@
         <div class="card-body">
           <h5 class="card-title">Torta bautismo</h5>
           <p class="card-text">La torta puede ser personalizada a gusto, por peso, tamaño, etc. No dudes en contactarnos!</p>
-          <a href="contacto.html" class="btn btn-primary">Comprar</a>
+          <a href="contacto.html" class="btn btn-card">Comprar</a>
         </div>
       </div>
 
@@ -141,7 +146,7 @@
         <div class="card-body">
           <h5 class="card-title">Torta boca</h5>
           <p class="card-text">La torta puede ser personalizada a gusto, por peso, tamaño, etc. No dudes en contactarnos!</p>
-          <a href="contacto.html" class="btn btn-primary">Comprar</a>
+          <a href="contacto.html" class="btn btn-card">Comprar</a>
         </div>
       </div>
 
@@ -150,11 +155,10 @@
         <div class="card-body">
           <h5 class="card-title">Torta corona</h5>
           <p class="card-text">La torta puede ser personalizada a gusto, por peso, tamaño, etc. No dudes en contactarnos!</p>
-          <a href="contacto.html" class="btn btn-primary">Comprar</a>
+          <a href="contacto.html" class="btn btn-card">Comprar</a>
         </div>
       </div>
-
-</div>
+</main>
 
 
 
