SASS + SEO + Mejoras generales a la pagina + Fix Links. PreEntrega3Faccini

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <div class="card-body">
             <h5 class="card-title">Torta princesa</h5>
             <p class="card-text">La torta puede ser personalizada a gusto, por peso, tamaño, etc. No dudes en contactarnos!</p>
-            <a href="contacto.html" class="btn btn-card">Comprar</a>
+            <a href="https://wa.me/+541122630604" class="btn btn-card">Comprar</a>
             </div>
         </div>
 
@@ -141,7 +141,7 @@
             <div class="card-body">
             <h5 class="card-title">Torta Racing</h5>
             <p class="card-text">La torta puede ser personalizada a gusto, por peso, tamaño, etc. No dudes en contactarnos!</p>
-            <a href="contacto.html" class="btn btn-card">Comprar</a>
+            <a href="https://wa.me/+541122630604" class="btn btn-card">Comprar</a>
             </div>
         </div>
     </div>
