--- a/index.html
+++ b/index.html
@@ -58,34 +58,34 @@
     <div id="carouselExample" class="carousel slide mx-auto mt-5">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="img/princesa.jpeg" class="d-block w-100" alt="..." title="Torta de princesa">
+                <img src="img/Torta Marinerito.jpeg" class="d-block w-100" alt="Torta Marinerito" title="Torta Marinerito">
             </div>
         <div class="carousel-item">
             <img src="img/racing.jpeg" class="d-block w-100" alt="Torta de racing" title="Torta de racing">
         </div>
         <div class="carousel-item">
-            <img src="img/brownie.jpeg" class="d-block w-100" alt="..." title="Torta brownie">
+            <img src="img/brownie.jpeg" class="d-block w-100" alt="Torta de racing" title="Torta brownie">
         </div>
         <div class="carousel-item">
-            <img src="img/fulbo.jpeg" class="d-block w-100" alt="..." title="Torta de futbol">
+            <img src="img/fulbo.jpeg" class="d-block w-100" alt="Torta de futbol" title="Torta de futbol">
         </div>
         <div class="carousel-item">
-            <img src="img/kakashi.jpeg" class="d-block w-100" alt="..." title="Torta Kakashi">
+            <img src="img/kakashi.jpeg" class="d-block w-100" alt="Torta Kakashi" title="Torta Kakashi">
         </div>
         <div class="carousel-item">
-            <img src="img/allboys.jpeg" class="d-block w-100" alt="..." title="Torta de Allboys">
+            <img src="img/allboys.jpeg" class="d-block w-100" alt="Torta de Allboys" title="Torta de Allboys">
         </div>
         <div class="carousel-item">
-            <img src="img/animales.jpeg" class="d-block w-100" alt="..." title="Torta de animales">
+            <img src="img/animales.jpeg" class="d-block w-100" alt="Torta de animales" title="Torta de animales">
         </div>
         <div class="carousel-item">
-            <img src="img/corona.jpeg" class="d-block w-100" alt="..." title="Torta corona">
+            <img src="img/corona.jpeg" class="d-block w-100" alt="Torta corona" title="Torta corona">
         </div>
         <div class="carousel-item">
-            <img src="img/marvel.jpeg" class="d-block w-100" alt="..." title="Torta de Avengers">
+            <img src="img/marvel.jpeg" class="d-block w-100" alt="Torta de Avengers" title="Torta de Avengers">
         </div>
         <div class="carousel-item">
-            <img src="img/lilo stich.jpeg" class="d-block w-100" alt="..." title="Torta de lilo & stitch">
+            <img src="img/lilo stich.jpeg" class="d-block w-100" alt="Torta de lilo & stitch" title="Torta de lilo & stitch">
         </div>
     </div>
 
